// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndicatorGroupSelect calls loadIndicatorGroups if no indicator groups exist 1`] = `
<div>
  <div
    class="inputField"
  >
    <div
      class="ui-SingleSelectField"
    />
  </div>
</div>
`;

exports[`IndicatorGroupSelect renders SelectField 1`] = `
<div>
  <div
    class="inputField"
  >
    <div
      class="ui-SingleSelectField"
    >
      <div
        class="ui-SingleSelectOption"
      />
      <div
        class="ui-SingleSelectOption"
      />
    </div>
  </div>
</div>
`;
